--- a/Newifi_D2.config
+++ b/Newifi_D2.config
@@ -25,13 +25,13 @@ CONFIG_PACKAGE_kmod-sdhci-mt7620=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_luci-app-webadmin=y
-CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
+CONFIG_PACKAGE_luci-app-ipsec-vpnd=n
 CONFIG_PACKAGE_luci-app-nps=y
-CONFIG_PACKAGE_luci-app-samba=y
+CONFIG_PACKAGE_luci-app-samba=n
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_ttyd=y
-CONFIG_PACKAGE_luci-app-p910nd=y
-CONFIG_PACKAGE_p910nd=y
+CONFIG_PACKAGE_luci-app-p910nd=n
+CONFIG_PACKAGE_p910nd=n
 CONFIG_PACKAGE_luci-app-ssr-plus=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Simple_obfs=y
