--- a/x86_64.config
+++ b/x86_64.config
@@ -29,15 +29,15 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
-CONFIG_PACKAGE_dnsmasq_full_auth=n
-CONFIG_PACKAGE_dnsmasq_full_conntrack=n
-CONFIG_PACKAGE_dnsmasq_full_dnssec=n
-CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=n
-CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=n
-CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=n
-CONFIG_PACKAGE_ddns-scripts_no-ip_com=n
-CONFIG_PACKAGE_ddns-scripts_nsupdate=n
-CONFIG_PACKAGE_ddns-scripts_route53-v1=n
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
+CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
+CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
+CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
+CONFIG_PACKAGE_ddns-scripts_nsupdate=y
+CONFIG_PACKAGE_ddns-scripts_route53-v1=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
@@ -78,4 +78,4 @@ CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
-CONFIG_PACKAGE_luci-app-frpc=n
+CONFIG_PACKAGE_luci-app-frpc=y
